syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message AMKLCEFNNCC {
	bool is_trial = 1;
	uint64 avatar_id = 2;
}
