syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 1664
// EnetChannelId: 0
// EnetIsReliable: true
message SetUpAvatarTeamRsp {
	int32 retcode = 2;
	uint32 team_id = 5;
	repeated uint64 avatar_team_guid_list = 12;
	uint64 cur_avatar_guid = 3;
}
